# algo_trading

./: .env.example  .gitignore  ALERTING_SETUP.md  BTM_backtest.py  IMPLEMENTATION_SUMMARY.md  Intraday_Momentum_Concretum.ipynb  LIVE_TRADING_README.md  README.md  beat_the_market.md  btm_alerts.py  btm_live_trading.py  btm_utils.py  extract_markdown.py  pyproject.toml  run_backtest.py  run_btm_trading.sh  run_evening_digest.sh  run_live.py  send_evening_digest.py  setup_schedule.sh  test_alerts.py  test_live_setup.py  trading_config.py
archive/: btm_live_trading.py  btm_utils.py  run_evening_digest.sh  send_evening_digest.py  volatility_tester.py
btm/: __init__.py  chart.py  core.py  data.py  email_report.py  orders.py
tests/: fixtures.py  test_core.py  test_integration.py
